nexus-rt/tests/ui/template_wrong_blueprint.stderr
error[E0631]: type mismatch in function arguments
  --> tests/ui/template_wrong_blueprint.rs:20:57
   |
11 | fn wrong_event(_config: Res<Config>, _event: String) {
   | ---------------------------------------------------- found signature defined here
...
20 |     let _template = HandlerTemplate::<MyBlueprint>::new(wrong_event, &reg);
   |                     ----------------------------------- ^^^^^^^^^^^ expected due to this
   |                     |
   |                     required by a bound introduced by this call
   |
   = note: expected function signature `fn(Res<'static, Config>, u32) -> _`
              found function signature `fn(Res<'_, Config>, String) -> _`
   = note: required for `&'a mut for<'a> fn(Res<'a, Config>, String) {wrong_event}` to implement `for<'a> FnOnce(Res<'static, Config>, u32)`
   = note: required for `for<'a> fn(Res<'a, Config>, String) {wrong_event}` to implement `TemplateDispatch<(Res<'static, Config>,), u32>`
note: required by a bound in `HandlerTemplate::<K>::new`
  --> src/template.rs
   |
   |     pub fn new<F>(f: F, registry: &Registry) -> Self
   |            --- required by a bound in this associated function
   |     where
   |         F: TemplateDispatch<K::Params, K::Event>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HandlerTemplate::<K>::new`
help: consider wrapping the function in a closure
   |
20 |     let _template = HandlerTemplate::<MyBlueprint>::new(|arg0: Res<'static, Config>, arg1: u32| wrong_event(arg0, /* String */), &reg);
   |                                                         +++++++++++++++++++++++++++++++++++++++            ++++++++++++++++++++
